feat: export pdf, pttx, jpg, png

--- a/src/core/styles/foundation/print.css
+++ b/src/core/styles/foundation/print.css
@@ -80,6 +80,7 @@
     border: 1px solid #ddd !important;
     box-shadow: none !important;
     border-radius: 0 !important;
+    border: none !important;
   }
 
   /* Last slide should not have page break */
