docs: add export documentation

--- a/src/core/templates/demo/index.html
+++ b/src/core/templates/demo/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="keywords"
-      content="mostage, mo.js.org, markdown presentation, markdown framework, markdown slides, markdown presentation framework, markdown web-based, markdown slides, slides, presentation, web-based"
+      content="mostage, mo.js.org, markdown presentation, markdown framework, markdown slides, markdown presentation framework, markdown web-based, slides, presentation, web-based, markdown, presentation-slides, presentation-framework, presentation-generator, markdown-presentation, markdown-slides, markdown-to-presentation, markdown-to-slides, markdown-to-pdf, markdown-to-pptx, markdown-to-png, markdown-to-jpg, markdown-to-html"
     />
     <meta name="author" content="Mostage" />
     <meta name="theme-color" content="#667eea" />
