--- a/src/core/themes/dracula.css
+++ b/src/core/themes/dracula.css
@@ -43,16 +43,10 @@
   color: var(--mostage-secondary-color);
 }
 
-.mostage-slide code {
-  background: var(--mostage-bg-color);
-  color: var(--mostage-accent-color);
-  border: 1px solid var(--mostage-border-color);
-}
-
 .mostage-slide pre {
   background: var(--mostage-bg-color);
-  color: var(--mostage-text-color);
   border: 1px solid var(--mostage-border-color);
+  padding: 0.5rem 1.5rem;
 }
 
 .mostage-slide blockquote {
