--- a/src/core/components/ui/overview/overview.css
+++ b/src/core/components/ui/overview/overview.css
@@ -252,7 +252,7 @@
 @media screen and (max-width: 480px) {
   .mostage-overview {
     grid-template-columns: repeat(2, 1fr);
-    padding: 20px 10px;
+    padding: 20px 10px 40px;
     gap: 12px 8px;
   }
 
@@ -360,7 +360,7 @@
   left: 0;
   right: 0;
   text-align: center;
-  padding: 10px;
+  padding: 7px;
   font-size: 12px;
   color: rgba(255, 255, 255, 0.7);
   z-index: 2001;
